fix format response
